...
                    Card {
                      Column(
                          modifier = Modifier.padding(10.dp).testTag("importDeckDialog"),
                          horizontalAlignment = Alignment.CenterHorizontally,
                          verticalArrangement = Arrangement.spacedBy(10.dp)) {
...
                            // Import button
                            Button(
                                modifier = Modifier.testTag("importButton"),
                                onClick = { importDialogExpanded.value = false }) {
                                  Text(stringResource(R.string.import_button_text))
...
                    selectedDeck.value!!.name,
                    style = Typography.displayMedium,
                    modifier = Modifier.padding(vertical = 10.dp).testTag("deckTitle"))
                // Deck description
                Text(
                    selectedDeck.value!!.description,
                    style = Typography.bodyMedium,
                    modifier = Modifier.padding(10.dp).testTag("deckDescription"))

                // Deck play mode buttons
                Button(
                    onClick = { playModesShown.value = !playModesShown.value },
                    modifier = Modifier.padding(vertical = 15.dp).testTag("deckPlayButton")) {
                      Row(verticalAlignment = Alignment.CenterVertically) {
                        Text(
...
                    modifier =
                        Modifier.fillMaxWidth(0.9f)
                            .testTag("deckFlashcardsList")
                            .heightIn(max = 600.dp)
                            .padding(horizontal = 10.dp),
...
) {
  CustomDropDownMenu(
      modifier = Modifier.testTag("publicDeckFab"),
      menuItems =
          listOf(
...
                  },
                  onClick = onSaveClick,
                  modifier = Modifier.testTag("saveToFavoritesMenuItem")),
              CustomDropDownMenuItem(
                  text = { Text(stringResource(R.string.create_local_copy)) },
...
                  },
                  onClick = onSaveCopyClick,
                  modifier = Modifier.testTag("createLocalCopyMenuItem")),
          ),
      expanded = expandedDropdownMenu.value,
...
) {
  CustomDropDownMenu(
      modifier = Modifier.testTag("deckFab"),
      menuItems =
          listOf(
...
                  icon = { Icon(imageVector = Icons.Default.Add, contentDescription = "Add card") },
                  onClick = onAddCardClick,
                  modifier = Modifier.testTag("addCardMenuItem")),
              CustomDropDownMenuItem(
                  text = { Text(stringResource(R.string.import_deck)) },
...
                  },
                  onClick = onImportDeckClick,
                  modifier = Modifier.testTag("importDeckMenuItem")),
              CustomDropDownMenuItem(
                  text = { Text(stringResource(R.string.edit_deck)) },
...
                  },
                  onClick = onEditClick,
                  modifier = Modifier.testTag("editDeckMenuItem"))),
      expanded = expandedDropdownMenu.value,
      onFabClick = { expandedDropdownMenu.value = !expandedDropdownMenu.value },
...
  ScreenTopBar(
      title = stringResource(R.string.deck_maj),
      titleTestTag = "deckTopBarTitle",
      onBackClick = onBackButtonClick,
      icon = {
        Icon(imageVector = Icons.AutoMirrored.Outlined.ArrowBack, contentDescription = "Back")
      },
      iconTestTag = "backButton")
}

...
                    else "$count " + stringResource(R.string.cards_min)
                  },
              modifier = Modifier.testTag("deckCardCount"),
              style = Typography.bodyLarge,
              fontStyle = FontStyle.Italic)
...
                    style = Typography.bodyLarge,
                    fontStyle = FontStyle.Italic,
                    modifier = Modifier.testTag("deckAuthorName"))
              }
        }
...
        IconButton(
            onClick = { sortOptionsShown.value = !sortOptionsShown.value },
            modifier = Modifier.testTag("sortOptionsButton")) {
              Icon(Icons.AutoMirrored.Filled.Sort, contentDescription = null)
            }
...
  ModalBottomSheet(onDismissRequest = { playModesShown.value = false }) {
    Column(
        modifier = Modifier.fillMaxWidth().padding(20.dp).testTag("playModesBottomSheet"),
        horizontalAlignment = Alignment.CenterHorizontally) {
          Text(
...
