...
                }
          }
          Column(
              horizontalAlignment = Alignment.CenterHorizontally,
              verticalArrangement = Arrangement.SpaceAround,
              modifier =
                  Modifier.testTag("flashcardItemColumn")
                      .semantics(mergeDescendants = true, properties = {})
                      .padding(top = 20.dp)) {
                Text(
                    flashcard.value.front,
                    style = Typography.bodyMedium,
                    modifier =
...
            verticalArrangement = Arrangement.spacedBy(10.dp)) {
              Text(
                  "$mode " + stringResource(R.string.flashcard_maj),
                  style = Typography.headlineSmall)
              // Front
              OutlinedTextField(
                  modifier = Modifier.fillMaxWidth().testTag("frontTextField"),
                  value = front.value,
                  onValueChange = { front.value = it },
                  label = { Text(stringResource(R.string.front)) })

              // Image block:
              val imageUri: MutableState<String?> = remember { mutableStateOf(null) }
...
                  }

              HorizontalDivider(modifier = Modifier.height(5.dp).padding(top = 10.dp))

              // Back
              OutlinedTextField(
                  modifier = Modifier.fillMaxWidth().testTag("backTextField"),
                  value = back.value,
                  onValueChange = { back.value = it },
                  label = { Text(stringResource(R.string.back)) })

              // Fake backs
              Box(
                  modifier =
                      Modifier.fillMaxWidth()
                          .testTag("FakeBacksBox")
                          .clickable { showFakeBacksDetails.value = !showFakeBacksDetails.value }
                          .border(
                              1.dp,
                              OutlinedTextFieldDefaults.colors().unfocusedPlaceholderColor,
                              OutlinedTextFieldDefaults.shape)) {
                    val fakeBacksText =
...
                          }
                          item {
                            Row(
                                horizontalArrangement = Arrangement.spacedBy(10.dp),
                                verticalAlignment = Alignment.CenterVertically) {
                                  IconButton(
                                      modifier = Modifier.testTag("addFakeBackButton"),
                                      onClick = { fakeBacks.value += "" }) {
                                        Icon(
                                            imageVector = Icons.Default.Add,
                                            contentDescription = "Add fake back")
                                      }
                                  Text(
...
                                }
                          }
                        }
                  }
              // Save button
              Button(
                  modifier = Modifier.testTag("saveFlashcardButton"),
                  enabled = front.value.isNotBlank() && back.value.isNotBlank(),
                  onClick = {
                    val newHasImage: Boolean =
                        if (hasImageBeenChanged.value) imageUri.value != null
                        else flashcard.value?.hasImage == true

...
    deckViewModel: DeckViewModel,
    flashcardViewModel: FlashcardViewModel,
    dropdownMenuExpanded: MutableState<Boolean>,
    editDialogExpanded: MutableState<Boolean>
) {
  DropdownMenu(
      modifier = Modifier.testTag("flashcardOptionsMenu"),
      expanded = dropdownMenuExpanded.value,
      onDismissRequest = { dropdownMenuExpanded.value = false }) {
        DropdownMenuItem(
            text = @Composable { Text(stringResource(R.string.update)) },
            onClick = {
              flashcardViewModel.selectFlashcard(flashcard.value)
              editDialogExpanded.value = true
              dropdownMenuExpanded.value = false
            },
            modifier = Modifier.testTag("editFlashcardMenuItem"))
        DropdownMenuItem(
            text = @Composable { Text(stringResource(R.string.delete)) },
            modifier = Modifier.testTag("deleteFlashcardMenuItem"),
            onClick = {
              val newDeck =
                  deckViewModel.selectedDeck.value?.copy(
                      flashcardIds =
                          deckViewModel.selectedDeck.value!!.flashcardIds.filter {
                            it != flashcard.value.id
...
