...

  AlertDialog(
      onDismissRequest = onDismissRequest,
      title = { Text("$mode Deck") },
      text = {
        Column(
            modifier = Modifier.padding(16.dp).testTag("deckDialog"),
            verticalArrangement = Arrangement.spacedBy(8.dp),
            horizontalAlignment = Alignment.CenterHorizontally) {
              OutlinedTextField(
                  value = deckTitle.value,
                  onValueChange = { deckTitle.value = Deck.formatTitle(it) },
                  label = { Text(stringResource(R.string.name)) },
                  maxLines = 1,
                  modifier = Modifier.testTag("deckTitleTextField"),
              )
              SelectVisibility(deckVisibility.value, true) { deckVisibility.value = it }
              OutlinedTextField(
                  value = deckDescription.value,
                  onValueChange = { deckDescription.value = Deck.formatDescription(it) },
                  label = { Text(stringResource(R.string.description)) },
                  minLines = 2,
                  maxLines = 5,
                  modifier = Modifier.testTag("deckDescriptionTextField"))
            }
      },
      confirmButton = {
        Button(
            enabled = deckTitle.value.isNotBlank(),
            modifier = Modifier.testTag("saveDeckButton"),
            onClick = {
              val newDeck =
                  deck.value?.copy(
                      name = deckTitle.value,
                      description = deckDescription.value,
                      visibility = deckVisibility.value,
...
